feat: tambahkan dokumentasi API menggunakan Swagger
